# mlx-whisper-dictation

./: .envrc  .gitignore  README.md  pyproject.toml  requirements.txt  whisper-dictation.py
src/mlx_whisper_dictation/: __init__.py  cli.py
