[project]
name = "mlx-whisper-dictation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Enno Richter", email = "enno@nerdworks.de" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "mlx-whisper>=0.4.2",
    "pyaudio>=0.2.14",
]

[project.scripts]
mlx-whisper-dictation = "mlx_whisper_dictation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
